tests/compile_fail/only_functions.rs
use rustic_macros::modifiers;

#[modifiers("main")]
struct S;

fn main() {}