tests/compile_fail/only_functions.stderr
error: expected `fn`
 --> tests/compile_fail/only_functions.rs:4:1
  |
4 | struct S;
  | ^^^^^^
